<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>IndirectTransmissionCalc</class>
 <widget class="QWidget" name="IndirectTransmissionCalc">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>800</width>
    <height>320</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Form</string>
  </property>
  <layout class="QHBoxLayout" name="horizontalLayout">
   <item>
    <layout class="QVBoxLayout" name="verticalLayout">
     <item>
      <widget class="QGroupBox" name="gbInstrumentConfig">
       <property name="title">
        <string>Instrument Setup</string>
       </property>
       <layout class="QGridLayout" name="gridLayout">
        <item row="0" column="0">
         <widget class="MantidQt::MantidWidgets::IndirectInstrumentConfig" name="iicInstrumentConfiguration">
          <property name="sizePolicy">
           <sizepolicy hsizetype="Maximum" vsizetype="Fixed">
            <horstretch>0</horstretch>
            <verstretch>0</verstretch>
           </sizepolicy>
          </property>
          <property name="techniques" stdset="0">
           <stringlist>
            <string>TOF Indirect Geometry Spectroscopy</string>
           </stringlist>
          </property>
          <property name="disabledInstruments" stdset="0">
           <stringlist>
            <string>TOSCA</string>
            <string>TFXA</string>
           </stringlist>
          </property>
          <property name="enableDiffraction" stdset="0">
           <bool>false</bool>
          </property>
          <property name="showInstrumentLabel" stdset="0">
           <bool>false</bool>
          </property>
         </widget>
        </item>
       </layout>
      </widget>
     </item>
     <item>
      <widget class="QGroupBox" name="gbSampleDetails">
       <property name="title">
        <string>Sample Details</string>
       </property>
       <layout class="QGridLayout" name="gridLayout_2">
        <property name="margin">
         <number>9</number>
        </property>
        <item row="0" column="0">
         <widget class="QLabel" name="lbChemicalFormula">
          <property name="text">
           <string>Chemical Formula</string>
          </property>
         </widget>
        </item>
        <item row="1" column="0">
         <widget class="QLabel" name="lbNumberDensity">
          <property name="text">
           <string>Number Density</string>
          </property>
         </widget>
        </item>
        <item row="2" column="0">
         <widget class="QLabel" name="lbThickness">
          <property name="text">
           <string>Thickness</string>
          </property>
         </widget>
        </item>
        <item row="2" column="1">
         <widget class="QDoubleSpinBox" name="spThickness">
          <property name="suffix">
           <string> cm</string>
          </property>
          <property name="maximum">
           <double>1000.000000000000000</double>
          </property>
          <property name="value">
           <double>0.100000000000000</double>
          </property>
         </widget>
        </item>
        <item row="1" column="1">
         <widget class="QDoubleSpinBox" name="spNumberDensity">
          <property name="suffix">
           <string> atoms/Ã…^3</string>
          </property>
          <property name="maximum">
           <double>10000.000000000000000</double>
          </property>
          <property name="value">
           <double>0.100000000000000</double>
          </property>
         </widget>
        </item>
        <item row="0" column="1">
         <layout class="QHBoxLayout" name="loChemicalFormula">
          <item>
           <widget class="QLineEdit" name="leChemicalFormula"/>
          </item>
          <item>
           <widget class="QLabel" name="valChemicalFormula">
            <property name="styleSheet">
             <string notr="true">color: rgb(255, 0, 0);</string>
            </property>
            <property name="text">
             <string>*</string>
            </property>
           </widget>
          </item>
         </layout>
        </item>
       </layout>
      </widget>
     </item>
     <item>
      <spacer name="verticalSpacer">
       <property name="orientation">
        <enum>Qt::Vertical</enum>
       </property>
       <property name="sizeHint" stdset="0">
        <size>
         <width>20</width>
         <height>40</height>
        </size>
       </property>
      </spacer>
     </item>
    </layout>
   </item>
   <item>
    <widget class="QTreeWidget" name="tvResultsTable">
     <property name="columnCount">
      <number>2</number>
     </property>
     <attribute name="headerDefaultSectionSize">
      <number>200</number>
     </attribute>
     <attribute name="headerMinimumSectionSize">
      <number>50</number>
     </attribute>
     <column>
      <property name="text">
       <string>Property</string>
      </property>
     </column>
     <column>
      <property name="text">
       <string>Value</string>
      </property>
     </column>
    </widget>
   </item>
  </layout>
 </widget>
 <customwidgets>
  <customwidget>
   <class>MantidQt::MantidWidgets::InstrumentSelector</class>
   <extends>QComboBox</extends>
   <header>MantidQtMantidWidgets/InstrumentSelector.h</header>
  </customwidget>
  <customwidget>
   <class>MantidQt::MantidWidgets::IndirectInstrumentConfig</class>
   <extends>QComboBox</extends>
   <header>MantidQtMantidWidgets/IndirectInstrumentConfig.h</header>
  </customwidget>
 </customwidgets>
 <resources/>
 <connections/>
</ui>
